--- a/notebook/work/evaluate_portfolio_model.ipynb
+++ b/notebook/work/evaluate_portfolio_model.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -30,22 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TOPIX Index\n",
-    "df_tpx = pd.read_csv(\"../data/tse_topix_20040331-20201031.csv\")\n",
+    "df_tpx = pd.read_csv(\"../../data/tse_topix_20040331-20201031.csv\")\n",
     "df_tpx = df_tpx.set_index(\"Date\")\n",
     "df_tpx = df_tpx[df_tpx.index >= \"2004-10-31\"]\n",
     "\n",
     "# TOPIX Core30 \n",
-    "df_tpx30 = pd.read_csv(\"../data/tse_topixcore30_20001031-202010131.csv\")\n",
+    "df_tpx30 = pd.read_csv(\"../../data/tse_topixcore30_20001031-202010131.csv\")\n",
     "df_tpx30 = df_tpx30.set_index('Date')\n",
     "df_tpx30 = df_tpx30[df_tpx30.index >= \"2004-10-31\"]\n",
     "\n",
     "# TOPIX 500\n",
-    "df_tpx500 = pd.read_csv(\"../data/tse_topix500_20001031-202010131.csv\")\n",
+    "df_tpx500 = pd.read_csv(\"../../data/tse_topix500_20001031-202010131.csv\")\n",
     "df_tpx500 = df_tpx500.set_index('Date')\n",
     "df_tpx500 = df_tpx500[df_tpx500.index >= \"2004-10-31\"]"
    ]
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,13 +139,12 @@
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX INDEX (2004/10/31 - 2020/10/31)\")\n",
     "plt.ylim([-0.2, 0.2])\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topixindex_chg_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +168,7 @@
     "plt.xticks([d for idx, d in enumerate(df.index) if idx % 12 == 0])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX INDEX (2004/10/31 - 2020/10/31)\")\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topixindex_cum_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -200,8 +198,7 @@
     "plt.xticks([d for idx, d in enumerate(df.index) if idx % 12 == 0])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX INDEX (2004/10/31 - 2020/10/31)\")\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topixindex_hist_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -261,8 +258,7 @@
     "plt.xticks([d for idx, d in enumerate(df.index) if idx % 12 == 0])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX Core30, rate of returns, monthly (2004/10/31 - 2020/10/31)\")\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topixcore30_chg_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -292,8 +288,7 @@
     "plt.xticks([d for idx, d in enumerate(df.index) if idx % 12 == 0])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX Core30, cumulative rate of returns, monthly (2004/10/31 - 2020/10/31)\")\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topixcore30_cum_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -353,8 +348,7 @@
     "plt.xticks([d for idx, d in enumerate(df.index) if idx % 12 == 0])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX 500, rate of returns, monthly (2000/10/31 - 2020/10/31)\")\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topix500_chg_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -384,8 +378,7 @@
     "plt.xticks([d for idx, d in enumerate(df.index) if idx % 12 == 0])\n",
     "plt.xticks(rotation=45)\n",
     "plt.title(\"TOPIX 500, cumulative rate of returns, monthly (2004/10/31 - 2020/10/31)\")\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topix500_cum_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -453,9 +446,7 @@
     "plt.xlim([-0.2, 0.2])\n",
     "plt.title(f\"TOPIX 500 equal share\\nmean={r_mean}, std={r_std}\\n(2004/10-2020/10)\")\n",
     "\n",
-    "\n",
-    "plt.show()\n",
-    "# plt.savefig(\"../figures/topix_ror_dist_20041031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -482,7 +473,7 @@
     "\n",
     "\n",
     "sns.pairplot(df_retchg)\n",
-    "plt.savefig(\"../figures/topixcore30_pairplot_20001031-20201031.png\", bbox_inches=\"tight\")"
+    "plt.show()"
    ]
   },
   {
@@ -508,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -592,9 +583,7 @@
     "df_bt_r = model.get_dfbt_r()\n",
     "df_bt_x = model.get_dfbt_x()\n",
     "model.evaluate_backtest(logging=True)\n",
-    "fig = model.plot_returns()\n",
-    "# fig.savefig(f\"../figures/mmvp_tpx30_w={params['window_size']}_plot.png\", bbox_inches=\"tight\")\n",
-    "del fig"
+    "fig = model.plot_returns()"
    ]
   },
   {
@@ -617,7 +606,7 @@
    ],
    "source": [
     "fig = model.plot_returns_histgram()\n",
-    "fig.savefig(f\"../figures/mmvp_tpx30_w={params['window_size']}_hist.png\", bbox_inches=\"tight\")"
+    "# fig.savefig(f\"../figures/mmvp_tpx30_w={params['window_size']}_hist.png\", bbox_inches=\"tight\")"
    ]
   },
   {
